gcc/testsuite/algol68/compile/error-bits-denotation-1.a68
begin short short bits a
            = short short 10r256; { dg-error "denotation is too large for short short bits" }
      short bits b
            = short 16rffff1; { dg-error "denotation is too large for short bits" }
      skip
end
